--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -1,19 +1,47 @@
-form {
+.login-form {
   display: flex;
-  height: 100vh;
-  width: 50vh;
-  margin-left: 30%;
-  margin-right: 30%;
   flex-direction: column;
-  justify-content: center;
-  align-content: center;
+  justify-content: space-around;
 }
 
 .login-form-username-label {
-  /* margin: 10%; */
-  /* margin-left: 20%; */
+  font-size: 50px;
+  text-align: center;
+  padding: 5px;
+  margin: 20px;
 }
 
 .login-form-password-label {
-  /* margin: 20%; */
+  font-size: 50px;
+  text-align: center;
+  padding: 5px;
+  margin: 20px;
+}
+
+.login-form > input {
+  padding: 20px 10px;
+  line-height: 28px;
+  font-size: 28px;
+}
+
+.login-form-btn {
+  display: inline-block;
+  margin-top: 10%;
+  height: 100px;
+  outline: 0;
+  cursor: pointer;
+  padding: 5px 16px;
+  font-size: 28px;
+  font-weight: 500;
+  line-height: 20px;
+  vertical-align: middle;
+  border: 1px solid;
+  border-radius: 6px;
+  color: #ffffff;
+  background-color: #2ea44f;
+  border-color: #1b1f2326;
+  box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px 0px,
+    rgba(255, 255, 255, 0.25) 0px 1px 0px 0px inset;
+  transition: 0.2s cubic-bezier(0.3, 0, 0.5, 1);
+  transition-property: color, background-color, border-color;
 }
