--- a/frontend/src/components/StoryDetails/storydetails.css
+++ b/frontend/src/components/StoryDetails/storydetails.css
@@ -12,6 +12,20 @@
   margin-right: 30%;
   background-color: rgba(131, 106, 214, 0.2);
   height: 100vh;
+  /* overflow: hidden; */
+}
+
+/* .story-details-img-container {
+  height: 200px;
+  width: 200px;
+} */
+
+.story-details-img {
+  /* object-fit: scale-down;
+  width: 540px;
+  height: auto; */
+  /* max-width: 100%;
+  max-height: 100%; */
 }
 
 .story-details-container > p {
@@ -30,7 +44,7 @@
 
 .comment-container-info {
   display: flex;
-  flex: auto;
+  /* flex-grow: 3; */
   flex-direction: column;
   background-color: white;
   border-radius: 5px;
@@ -41,8 +55,13 @@
 .comment-container-info-username {
   /* margin-bottom: 5px; */
   margin: 0;
+  font-weight: bold;
+  font-size: large;
+  border-bottom: 1px solid black;
 }
 
 .comment-container-info-created {
   margin: 0;
+  border-top: 1px solid black;
+  text-align: right;
 }
