--- a/frontend/src/components/HomePage/homepage.css
+++ b/frontend/src/components/HomePage/homepage.css
@@ -29,6 +29,14 @@
   margin-left: 5px;
 }
 
+.stories-title {
+  background-color: rgb(201, 234, 193);
+  border-radius: 10px;
+  font-size: 25px;
+  text-align: center;
+  font-weight: 600;
+}
+
 h3 {
   /* min-width: 0; */
   display: flex;
