--- a/frontend/src/components/UserStories/userstories.css
+++ b/frontend/src/components/UserStories/userstories.css
@@ -33,6 +33,7 @@
   display: flex;
   margin-bottom: 10%;
   flex-direction: column;
+  align-items: center;
 }
 
 .update-story-btn {
@@ -49,6 +50,8 @@
   font-size: 16px;
   margin-top: 2%;
   margin-bottom: 2%;
+  width: 15%;
+  align-items: center;
 }
 
 .delete-story-btn {
@@ -65,8 +68,17 @@
   font-size: 16px;
   margin-top: 2%;
   margin-bottom: 2%;
+  width: 25%;
 }
 
 .update-story-btn-link {
   text-decoration: none;
+}
+
+.story-title {
+  background-color: rgb(201, 234, 193);
+  border-radius: 10px;
+  font-size: 25px;
+  text-align: center;
+  font-weight: 600;
 }
