--- a/frontend/src/components/UserStories/userstories.css
+++ b/frontend/src/components/UserStories/userstories.css
@@ -50,7 +50,7 @@
   font-size: 16px;
   margin-top: 2%;
   margin-bottom: 2%;
-  width: 15%;
+  /* width: 15%; */
   align-items: center;
 }
 
@@ -68,7 +68,7 @@
   font-size: 16px;
   margin-top: 2%;
   margin-bottom: 2%;
-  width: 25%;
+  /* width: 25%; */
 }
 
 .update-story-btn-link {
