--- a/frontend/src/components/EditStory/editstory.css
+++ b/frontend/src/components/EditStory/editstory.css
@@ -13,6 +13,14 @@
   flex-direction: column;
 }
 
+.edit-story-errors {
+  background-color: white;
+  border-radius: 20px;
+  width: 100%;
+  max-width: 400px;
+  margin-bottom: 5px;
+}
+
 /* .create-story-form-main-label {
     margin-bottom: 5%;
   } */
