--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -8,6 +8,20 @@
   /* align-items: center; */
 }
 
+.fa-solid {
+  letter-spacing: 1px;
+}
+
+.navigation-container-icon-label-wrapper a {
+  color: black;
+}
+
+.navigation-container-icon-label-wrapper a:hover,
+.navigation-container-icon-label-wrapper a:active,
+.navigation-container-icon-label-wrapper a.active {
+  color: black;
+}
+
 .login-btn {
   display: inline-block;
   outline: none;
