--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -48,6 +48,7 @@
   /* display: flex !important; */
   /* flex-direction: column; */
   /* justify-content: center; */
+  margin: 0.4rem;
 }
 
 .profile-dropdown {
